examples/invalid/23_type_alias_unannotated_higher_kind_parameter.lane
// Invalid: omitted type parameter kinds default to Type and are not inferred
// from higher-kinded use.

module Examples.Invalid23
pub type ApplyInt[F] = F[Int]

pub let answer : ApplyInt[Int] = 42
